# lace

./: CHANGELOG.md  CMakeLists.txt  DOCS.md  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
benchmarks/: CMakeLists.txt  bench.py
benchmarks/cholesky/: cholesky-lace.c  cholesky.c
benchmarks/cilksort/: cilksort-lace.c  cilksort-seq.c
benchmarks/dfs/: dfs-lace.c  dfs-seq.c
benchmarks/fft/: fft-lace.c  fft-lace.h  fft.c  fft.h
benchmarks/fib/: fib-lace.c  fib-lace.cpp  fib-seq.c
benchmarks/heat/: heat-lace.c  heat.c
benchmarks/integrate/: integrate-lace.c  integrate.c
benchmarks/knapsack/: knapsack-lace.c  knapsack.c
benchmarks/lu/: lu-lace.c  lu.c
benchmarks/matmul/: matmul-lace.c  matmul-seq.c
benchmarks/nqueens/: nqueens-lace.c  nqueens-seq.c
benchmarks/pi/: pi-lace.c  pi-seq.c  pi-seq2.c
benchmarks/quicksort/: quicksort-lace.c  quicksort.c
benchmarks/rectmul/: rectmul-lace.c  rectmul.c
benchmarks/strassen/: strassen-lace.c  strassen-seq.c
benchmarks/uts/: uts-lace.c  uts.c  uts2-lace.c
src/: gen.sh  lace.c  lace.h  lace.pc.in  lace.sh  lace128.c  lace128.h  lace128.pc.in  lace14.c  lace14.h  lace14.pc.in  lace32.c  lace32.h  lace32.pc.in  lace_config.h.in
test/: CMakeLists.txt  test_backoff.c  test_barrier.c  test_suspend.c  test_together.c
